--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "dinky",
     "pluggy",
     "Pillow",
-    "requests"
+    "requests",
+    "setuptools"
 ]
 
 [project.optional-dependencies]
