--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ dependencies = [
 test = ["pytest"]
 
 [build-system]
-requires = ["setuptools >= 61.0"]
+requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
 build-backend = "setuptools.build_meta"
